--- a/examples/basic.html
+++ b/examples/basic.html
@@ -67,7 +67,7 @@
 		var msg = new SpeechSynthesisUtterance(
 				'This is RBS Islington Branch. Opening hours' +
 				 'are from 9 o\'clock to 5o\'clock.');
-    		window.speechSynthesis.speak(msg);
+    		SpeechSynthesis.speak(SpeechSynthesisUtterance(msg);
 	})()
 
 	//////////////////////////////////////////////////////////////////////////////////
