--- a/examples/basic.html
+++ b/examples/basic.html
@@ -62,7 +62,7 @@
 		var geometry = new THREE.BoxGeometry(1,1,1)
 		var object3d = new THREE.Sprite(material );
 		object3d.scale.set( 2, 2, 1 );
-		scene.add(object3d)
+		scene.add(object3d);
 
 		var msg = new SpeechSynthesisUtterance(
 				'This is RBS Islington Branch. Opening hours' +
